@@ -224,7 +224,7 @@ free-redefines-position:		ok
 record-delimiter:			ok
 sequential-delimiters:			ok
 record-delim-with-fixed-recs:		ok
-missing-statement:			warning		# not verified yet
+missing-statement:			error		# according to documentation
 zero-length-literals:			unconformable
 xml-generate:				ok
 xml-generate-extra-phrases:		ok
